# Peach

./: .gitignore  LICENSE  README.md  desktop.ini  test.sh
peach/: CMakeLists.txt  LICENSE.txt  README.md  action_clog_combine.sh  action_clog_new.sh  action_clog_post_combine.sh  action_genico.sh  build_install.sh  clean.ps1  clean_debug_install.sh  clean_grabage_build.sh  cmaked.sh  desktop.ini  git_add_and_commit.sh  quick_build_install.sh  test.sh
peach/.designs/: README.md
peach/.designs/diagrams/: 2021.01.16_Project_Structure.drawio  2021.12.25_boostrap_workflow.drawio
peach/app_bootstrap/: CMakeLists.txt  README.md
peach/app_bootstrap/config/: startup.env  startup.pconfig
peach/app_bootstrap/config/scripts/: houdini_init.py
peach/app_bootstrap/config/shell/: startup_dcc_init.sh
peach/app_bootstrap/resource/: win_appicon_bln.rc
peach/app_bootstrap/src/: appinfo.h  basetypes.h  findconfig.h  main.cpp  main_bln.cpp  main_hou.cpp
peach/bootstrap/: CMakeLists.txt  README.md
peach/bootstrap/resource/: win_appicon_hou.rc
peach/bootstrap/src/: appinfo.h  findconfig.h  main.cpp  main.h
peach/config/: startup.pconfig
peach/config/bootstrap/: startup_dcc_init.ps1  startup_dcc_init.sh
peach/config/scripts/: blender_init.py  houdini_init.py  houdini_util.py
peach/config/shell/: startup_dcc_init.sh
peach/dev_changeLogs/: 2021_12_25_cl.md  2021_12_26_cl.md  2021_12_27_cl.md  2021_12_29_cl.md  2021_12_30_cl.md  ChangeLog.md  README.md  _newlog.sh
peach/dev_changeLogs/2021_12/: 2021_12_23_cl.md  2021_12_24_cl.md  2021_12_25_cl.md  2021_12_26_cl.md  2021_12_31_cl.md
peach/dev_changeLogs/2022_01/: 2022_01_01_cl.md  2022_01_02_cl.md  2022_01_06_cl.md  2022_01_07_cl.md  2022_01_08_cl.md  2022_01_09_cl.md  2022_01_10_cl.md  2022_01_11_cl.md  2022_01_12_cl.md  2022_01_14_cl.md  2022_01_15_cl.md  2022_01_18_cl.md  2022_01_19_cl.md  2022_01_20_cl.md  2022_01_21_cl.md  2022_01_22_cl.md  2022_01_23_cl.md  2022_01_24_cl.md  2022_01_25_cl.md  2022_01_26_cl.md  2022_01_27_cl.md  2022_01_28_cl.md  2022_01_29_cl.md  2022_01_30_cl.md  2022_01_31_cl.md
peach/dev_changeLogs/2022_02/: 2022_02_01_cl.md  2022_02_02_cl.md  2022_02_03_cl.md  2022_02_04_cl.md  2022_02_05_cl.md  2022_02_06_cl.md  2022_02_07_cl.md  2022_02_09_cl.md  2022_02_11_cl.md  2022_02_13_cl.md  2022_02_15_cl.md  2022_02_24_cl.md
peach/dev_changeLogs/scripts/: _combinelog.sh  _newlog.sh  changelog_combine.py  changelog_gen.py  changelog_gen_args.py  changelog_version_up.py  changelog_version_uplib.py
peach/dev_docTools/: .gitignore  convert.sh
peach/dev_docTools/scripts/: doc_cast.py
peach/dev_osTools/: clean.ps1  clean_build.ps1
peach/dev_osTools/backup_tools/: backup.sh
peach/dev_osTools/cmake_configlive/: cmake_config_build_all.py  cmake_config_build_no_v.py  cmake_config_devlib_only.py  cmake_config_devlib_only_nv.py
peach/dev_osTools/vscode-tools/vscode-pconfig/: package.json
peach/dev_osTools/vscode-tools/vscode-pconfig/syntaxes/: pconfig.json
peach/icons/: README.md  genico.sh
peach/icons/ICO/: icon_peach vscode_dev.rc  icon_peach vscode_docs.rc  icon_peach.rc  icon_peachFolder.rc  icon_peachFolderG_build.rc  icon_peachFolderG_vscode.rc  icon_peachFolder_bootstrap.rc  icon_peachFolder_design.rc  icon_peachFolder_dev.rc  icon_peachFolder_doc.rc  icon_peachFolder_library.rc  icon_peachFolder_pBlender.rc  icon_peachFolder_pHoudini.rc  icon_peachFolder_project.rc  icon_peachFolder_vscode.rc  icon_peachFolder_wip.rc  icon_peach_black.rc  icon_peach_blender.rc  icon_peach_dev.rc  icon_peach_fblack.rc  icon_peach_fwhite.rc  icon_peach_houdini.rc  icon_peach_vscode_dev.rc  icon_peach_vscode_doc.rc  icon_peach_vscode_docs.rc  icon_peach_wip.rc
peach/icons/scripts/: AI_last_export_artboard_setting.txt  genico.py  genico.sh
peach/lib/: CMakeLists.txt  README.md
peach/lib/comment_templates/: copyright.c  copyright.py
peach/lib/peach/: pAst.py  pDir.py  pGlob.py  pIco.py  pImp.py  pLog.py  pUtil.py
peach/lib/peach/houdini_panels/: CMakeLists.txt
peach/lib/peach/houdini_panels/asset_browser/: CMakeLists.txt  pypanel_asset_browser.py
peach/lib/peach/houdini_panels/asset_manager/: CMakeLists.txt  pypanel_asset_manager.py
peach/lib/peach/houdini_panels/peach_main/: CMakeLists.txt  pypanel_peach_main.py
peach/lib/peach/houdini_panels/templates/: python_panel_comment.py  python_panel_template.xml
peach/lib/peach/houdini_toolbars/: CMakeLists.txt  MakeShelf.cmake
peach/lib/peach/houdini_toolbars/shelf_peach/: CMakeLists.txt
peach/lib/peach/houdini_toolbars/shelf_peach_dev/: CMakeLists.txt
peach/lib/peach/houdini_toolbars/templates/: python_toolbar_comment.py  tool_template.xml  toolbar_template.xml
peach/lib/peach/pBlender/: pbu.py
peach/lib/peach/pBlender/addons/: bImg.py
peach/lib/peach/pHoudini/: hAst.py  hNode.py  hParm.py  node.py  test.py  wm.py
peach/lib/peach/pHoudini/panels/: __init__.py  peach_main.py  (+2 more)
peach/lib/peach/pQt/: QtHotel.py  img.py  pq_ico.py  qHotel.py  sty.py  style.py  wgt.py
peach/lib/peach/pUtil/: lib_help.py  pDir.py  pImp.py  pLog.py  test.py
peach/lib/peach/templates/: copyright.py
peach/lib/tests/: blender_load_asset_test.py  blender_save_test.py  peach_pIco_test.py  peach_pLog_test.py  peach_pQt_pq_ico.py  test_blender_save.sh
peach/lib/util_tools/: resize_image.py
peach/os_devtools/: Microsoft.PowerShell_profile.ps1
peach/pBlender/: README.md  blender_init.py  start_dev_blender.sh
peach/pHoudini/: CMakeLists.txt  README.md  cmd_gather_hdas.sh  start_dev_houdini.sh  untitled.hip
peach/pHoudini/config/: CMakeLists.txt
peach/pHoudini/config/scripts/: dev_houdini_init.py
peach/pHoudini/config/templates/: __in__PeachAsset.json  __in__PeachEnv.json  __in__PeachModel.json  __in__PeachPy.json  __in__PeachUltraUrban.json
peach/pHoudini/dev/: PeachEnv.json  peach_env.json
peach/pHoudini/dev/PeachEnv/: jump.pref.nosave
peach/pHoudini/dev/scripts/: hda_gathering.py
peach/pHoudini/script_cache/: bln_import_cmds.py  htb_init.py
peach/pHoudini/vex/: VEX_UU_gen_wall_and_instances_snippet.vfl
peach/vscode-tools/: README.md
(+83 files in other folders)
